--- a/BlockTrip_FE/index.html
+++ b/BlockTrip_FE/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <link href="/dist/output.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_KEY%&callback=myMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%VITE_GOOGLE_KEY%"></script>
     <title>BlockTrip</title>
   </head>
   <body>
